--- a/summary/debate-2024-05-09/index.html
+++ b/summary/debate-2024-05-09/index.html
@@ -12,7 +12,7 @@ Housing Affordability Crisis
 One of the most pressing issues facing Canadians is the affordable rentals crisis. The Minister of Housing, Infrastructure and Communities, Sean Fraser, acknowledged that housing costs have doubled since 2018, making it difficult for many people to find a place to live.">
 <meta name="author" content="">
 <link rel="canonical" href="http://localhost:1313/summary/debate-2024-05-09/">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.4599eadb9eb2ad3d0a8d6827b41a8fda8f2f4af226b63466c09c5fddbc8706b7.css" integrity="sha256-RZnq256yrT0KjWgntBqP2o8vSvImtjRmwJxf3byHBrc=" rel="preload stylesheet" as="style">
+<link crossorigin="anonymous" href="../../assets/css/stylesheet.4599eadb9eb2ad3d0a8d6827b41a8fda8f2f4af226b63466c09c5fddbc8706b7.css" integrity="sha256-RZnq256yrT0KjWgntBqP2o8vSvImtjRmwJxf3byHBrc=" rel="preload stylesheet" as="style">
 <link rel="icon" href="http://localhost:1313/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="http://localhost:1313/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="http://localhost:1313/favicon-32x32.png">
