--- a/404.html
+++ b/404.html
@@ -71,7 +71,7 @@
         
         <section class="item">
           <div>
-            <h1 class="title"><a href='./posts/debate-2024-05-25/'>Hanssard - May 24, 2024</a></h1>   
+            <h1 class="title"><a href='./posts/debate-2024-05-25/'>Hansard - May 24, 2024</a></h1>   
             <div class="date">May 25, 2024</div>
           </div>
         </section>
